Use native java base64